Fixes pagination on mobile

--- a/src/styles/includes/pagination.scss
+++ b/src/styles/includes/pagination.scss
@@ -9,16 +9,16 @@
 
 .pagination li {
   display: inline-block;
-  margin-right: 4px;
 }
 
 .pagination li * {
   display: inline-block;
   padding: 0 math.div($spacing-unit, 2);
   border-bottom: 2px solid transparent;
+  margin-right: 4px;
 }
 
-.pagination .numbers {
+.pagination .number {
   padding: 0;
   display: none;
 }
@@ -32,10 +32,13 @@
   content: "\2026";
 }
 @include media-query-min(600px) {
-  .pagination .numbers,
+  .pagination .number,
   .pagination .start-ellipsis,
   .pagination .end-ellipsis {
     display: inline-block;
+  }
+  .pagination .number {
+    padding: 0 math.div($spacing-unit, 2);
   }
 }
 
